Fix scrollbar white in corner bug

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,23 @@ html {
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--theme);
+}
+
+::-webkit-scrollbar-corner {
+    background: transparent;
+}
+
+::placeholder {
+    color: var(--text-secondary);
+    user-select: none;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -391,17 +408,4 @@ footer {
     100% {
         transform: rotate(360deg);
     }
-}
-
-::-webkit-scrollbar-thumb {
-    background: var(--theme);
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-::placeholder {
-    color: var(--text-secondary);
-    user-select: none;
 }
